style: 맨위로 링크 숨김

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -98,4 +98,9 @@
   .nav-footer .spacer {
     flex: 1;
   }
+
+  /* "맨 위로" 링크 숨김 */
+  .site-footer a[href="#top"] {
+    display: none;
+  }
 </style>
